# median-filter

./: CMakeLists.txt  README.md
cmakex/: USAGE.md  add_component.cmake  build_type.cmake  cmake.cmake  compiler_warnings.cmake  cuda.cmake  hip.cmake  install_project.cmake  install_target.cmake
cmakex/template/: Config.cmake.in  ProjectConfig.cmake.in
examples/: CMakeLists.txt  median_filter2d.cpp
include/gungnir/median_filter/: median_filter_2d.hpp  median_selection_network_sorter.hpp  sorting_network_sorter.hpp
include/gungnir/median_filter/impl/: bounds_check.hpp  ceiling_division.hpp  pitched_image.hpp  unified_gpu_runtime.hpp
include/gungnir/median_filter/impl/kernel/: median_filter_2d_kernel.hpp
include/gungnir/median_filter/impl/sorting/: batcher_odd_even_merge_sort_network.hpp  bitonic_merge_sort_network.hpp  bose_nelson_sort_network.hpp  bubble_sort_network.hpp  compare_and_swap.hpp  compile_time_grid_loop.hpp  insertion_sort_network.hpp  median_selection_network_builder.hpp  size_optimized_sort_network.hpp  sorting_network_executor.hpp
